--- a/config.conf
+++ b/config.conf
@@ -1,32 +1,63 @@
-#Header
-#
-#
-#Tolles Programm
-#
-#Header
+#____________________________________#
+#               Header               #
+#                                    #
+#                                    #
+#           Tolles Programm          #
+#                                    #
+#               Header               #
+#     AncientRegions test Config     #
+#    Ich bin eine TestConfiguraton   #
+#____________________________________#
 
-    #KeyValueTest
-    tada: 'tadavalue'
+#KeyValueTest
+tada: 'tadavalue'
 
+#KeyValueTest22
+tada22: 56.8
 
-    #KeyValueTest22
-    tada22: 56.8
+tada23: 23.0
 
-    tada23: 23.0
+testnested:
+    nocheine: 5623.0
 
-2bSection
-    tada2: 'tadavalue2'
-    tada3: false
+    testnestedsection:
+        läuft: 'hahahaha'
+        lalala: 56112.0
+        valuenested: 'keynested'
 
-    #Toller Wert
-    tada4: true
+    zweitesection:
 
-    tada5: 'adavalue5'
+        #Ich bin ein toller Kommentar
+        keytoll: 56765.0
+
+        liste: 
+        - 3456.0
+        - 'tatatata'
+        - false
+        zeweiteliste: 
+        - 9999.0
+        - 'hjdjdhjf'
+        - 'jhjdhds'
+        - true
+
+newtest:
+    lolvalue: 'hahahaha'
+    test: 56.0
+
+    #ICH bin ein ganz langer kommentar und mache jetzt alles kaputt damm damm dammmmmmmm. Aber villeicht auch nicht
+    lustig: 55555.0
 
 #Lala Section
-a2Section
+a2Section:
+
+    #LOL
     tada6: 'Anything'
+
     listtest: 
         - 'Test'
         - 'zwei'
+
+2bSection:
+    tada2: 'tadavalue2'
+    tada3: false
 
