--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.moddylp</groupId>
-    <artifactId>ymlconfig</artifactId>
+    <artifactId>simplecommentconfig</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
